kyverno/block-label-namespace/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-label-namespace
spec:
  background: false
  rules:
    - name: block-label-namespace
      match:
        any:
          - resources:
              kinds: ["*"]
      exclude:
        any:
          - clusterRoles:
              - cluster-admin
      validate:
        message: "Label admin.io/* is not allowed"
        cel:
          expressions:
            - expression: "'labels' in object.metadata ? !object.metadata.labels.exists(k, k.matches('admin.io.*')) : true"
