kyverno/block-label-namespace/validating-policy.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: block-label-namespace
spec:
  failurePolicy: Fail
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: ["networking.k8s.io"]
        apiVersions: ["*"]
        operations: [CREATE, UPDATE]
        resources: ["*"]
  validations:
    - message: "teccle-group.io/* labels are only allowed to be set by cluster-admin users"
      expression: >
        (
          has(object.metadata.labels) ?
          object.metadata.labels.exists(k, k.matches('.*\\.teccle-group\\.io.*')) :
          true
        )
        ||
        (
          has(request.userInfo.groups) &&
          request.userInfo.groups.exists(g, g == 'cluster-admin') || request.userInfo.groups.exists(g, g == 'kubeadm:cluster-admins')
        )
